--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Leap year detector</title>
+    <title>Roman Numericals Converter</title>
   </head>
   <body>
     <div class="container">
-      <h1>Leap year detector</h1>
+      <h1>Roman Numbers Converter</h1>
 
-      <form id="leap-year">
+      <form id="numberInput">
         <div class="form-group">
-          <label for="year">Enter a year and find out if it's a leap year:</label>
-          <input id="year" type="text">
+          <label for="number">Enter a number and find it's Roman Numerical Equivanet</label>
+          <input class="number" type="text">
         </div>
 
         <button type="submit" class="btn">Find out!</button>
       </form>
 
       <div id="result">
-        <p><span class="year"></span> is <span class="not"></span> a leap year.</p>
+        <p></p>
       </div>
     </div>
   </body>
