add code expaning the conversions up to all roman numericlas or 3999

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <form id="numberInput">
         <div class="form-group">
           <label for="number">Enter a number and find it's Roman Numerical Equivanet</label>
-          <input class="number" type="text">
+          <input class="number" type="number">
         </div>
 
         <button type="submit" class="btn">Find out!</button>
